add part 3 : microservice definitions

--- a/assets/main.css
+++ b/assets/main.css
@@ -9203,3 +9203,13 @@ pre.console-output {
 
 figure {
   margin-top: 25px; }
+
+.table-grade-minus {
+  font-weight: bold;
+  color: #ff0000;
+  font-size: 1.2em; }
+
+.table-grade-plus {
+  font-weight: bold;
+  color: #00c800;
+  font-size: 1.2em; }
